@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- use the pxtool instead of the catalog to find locked proxies to unlock when
+  accepting draft
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
